# cookiecutter-testing

./: .buildinfo  .cruft.json  Makefile  README.md  genindex.html  index.html  modules.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  modules.doctree
.github/workflows/: pipeline.yaml
_sources/: index.md.txt
docs/: requirements.txt
docs/source/: conf.py  index.md  modules.md
src/cookiecutter-testing/: logic.py
tests/integration/: test_logic.py
tests/unit/: test_unit.py
